@@ -7,9 +7,6 @@
  * Description : an image files selector dialog.
  *
  * Copyright (C) 2004-2007 by Gilles Caulier <caulier dot gilles at gmail dot com>
- * Copyright (C) 2004-2005 by Renchi Raju <renchi.raju at kdemail.net>
- * Copyright (C) 2004-2005 by Jesper K. Pedersen <blackie at kde.org>
- * Copyright (C) 2004-2005 by Aurelien Gateau <aurelien dot gateau at free.fr>
  *
  * This program is free software; you can redistribute it
  * and/or modify it under the terms of the GNU General
@@ -34,26 +31,18 @@
 // KDE includes.
 
 #include <kurl.h>
-#include <kdialog.h>
 
 // LibKipi includes.
 
-#include "interface.h"
-#include "imagecollection.h"
 #include "libkipi_export.h"
-
-class Q3ListViewItem;
-
-class K3FileItem;
 
 namespace KIPI
 {
 
-class LIBKIPI_EXPORT ImageDialog : public KDialog 
-{
-Q_OBJECT
+class ImageDialogPrivate;
 
-    class Private;
+class LIBKIPI_EXPORT ImageDialog
+{
 
 public:
 
@@ -66,17 +55,9 @@ public:
     static KUrl getImageURL(QWidget*, Interface*);
     static KUrl::List getImageURLs(QWidget*, Interface*);
 
-private Q_SLOTS:
-
-    void fillImageList(Q3ListViewItem*);
-    void slotImageSelected(Q3ListViewItem*);
-    void slotImagesSelected();
-    void slotGotPreview(const K3FileItem*, const QPixmap&);
-    void slotInitialShow();
-
 private:
 
-    Private* d;
+    ImageDialogPrivate* d;
 };
 
 } // namespace KIPI
