@@ -1,6 +1,8 @@
 0.2.0
 ------------------------------------------------------------------------
+
 Port to CMake/KDE4/QT4
+new depency to libKDcraw
 
 0.1.6-svn
 ------------------------------------------------------------------------
